# isitup.sh

./: main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
